--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
         <link rel="stylesheet" href="styles.css">
     </head>
 <body>
@@ -40,7 +41,7 @@
     <div class="element">
         <span class="element-number"></span>
         <div class="element-slider-container">
-            <input type="range" class="element-slider" min="0" max="100" value="0">
+            <input type="range" class="element-slider" min="0" max="100" value="0" data-role="none" orient="vertical">
             <span class="slider-value">0</span>
         </div>
 
