--- a/client/index.html
+++ b/client/index.html
@@ -3,18 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Add Elements</title>
+        <title>Add trains</title>
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+        <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.13.8/css/jquery.dataTables.css">
+        <!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />-->
+        <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 
-<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style/main.css">
+        <link rel="stylesheet" href="style/buttons.css">
+        <link rel="stylesheet" href="style/range_input.css">
+        <link rel="stylesheet" href="style/popup.css">
     </head>
 <body>
     <button id="addButton">Add Train</button>
-    <div id="elementContainer"></div>
+    <div id="trainContainer"></div>
     <div id="popup" class="popup">
         <div class="popup-content">
             <span class="close" id="closePopup">&times;</span>
@@ -36,26 +40,60 @@
             </div>
         </div>
     </div>
-    <!-- Template for the element with a slider and a jQuery Mobile flip switch -->
-<template id="elementTemplate">
-    <div class="element">
-        <span class="element-number"></span>
-        <div class="element-slider-container">
-            <input type="range" class="element-slider" min="0" max="100" value="0" data-role="none" orient="vertical">
-            <span class="slider-value">0</span>
-        </div>
 
-        <select name="element-switch" id="element-switch" data-role="flipswitch">
-            <option value="reverse">Rev</option>
-            <option value="forward" selected>Fwd</option>
-        </select>
+<template id="trainTemplate">
+    <div class="train">
+        <section class="train-details">
+            <div class="train-image">
+                <img src="images/Class66.jpg"/>
+            </div>
+            <h1 class="train-name">
+                EWS Class #66
+            </h1>
+            <subtitle class="train-address">
+                Loco Address #<span class="train-number"></span>
+            </subtitle>
+        </section>
+        <section class="train-control">
+            <panel class="throttle-panel">
+                <div class="train-throttle-container">
+                    <input type="range" class="throttle" min="0" max="100" value="0" orient="vertical">
+                    <span class="throttle-value">0</span>
+                </div>
 
-        <div class="on-off-buttons">
-            <button class="on-button" id="f1">F1</button>
-            <button class="on-button" id="f2">F2</button>
-            <button class="on-button" id="f3">F3</button>
-            <button class="on-button" id="f4">F4</button>
-        </div>
+                <div class="stop-button">
+                    <button id="Stop">Stop</button>
+                </div>
+
+                <div class="direction-buttons">
+                    <button id="reverse">Reverse</button>
+                    <button id="forward" class="active">Forward</button>
+                </div>
+            </panel>
+            <panel class="function-panel">
+                <div class="function-buttons">
+                    <div class="function-buttons">
+                        <button id="f0">
+                            <img src="icon1.png" alt="Icon 1">
+                            <name>Directional lights</name>
+                        </button>
+                        <button id="f1">
+                            <img src="icon2.png" alt="Icon 2">
+                            <name>Interior lights</name>
+                        </button>
+                        <button id="f2">
+                            <img src="icon3.png" alt="Icon 3">
+                            <name>Function #3</name>
+                        </button>
+                        <button id="f3">
+                            <img src="icon4.png" alt="Icon 4">
+                            <name>Function #4</name>
+                        </button>
+                    </div>
+
+                </div>
+            </panel>
+        </section>
     </div>
 </template>
 
