--- a/client/index.html
+++ b/client/index.html
@@ -15,18 +15,26 @@
         <link rel="stylesheet" href="style/buttons.css">
         <link rel="stylesheet" href="style/range_input.css">
         <link rel="stylesheet" href="style/popup.css">
+
+        <meta name="apple-mobile-web-app-capable" content="yes">
     </head>
 <body>
+    <div class="content">
+    <nav id="topNav" class="topNav">
+        <button id="trainControl" class="navButton">Trains</button>
+        <button id="accessoriesControl" class="navButton">Accessories</button>
+    </nav>
     <div id="trainContainer" class="containers">
         <div id="container1" class="container">
             <button class="add-train-button">Add Train</button>
         </div>
+        <!--
         <div id="container2" class="container">
             <button class="add-train-button">Add Train</button>
         </div>
         <div id="container3" class="container">
             <button class="add-train-button">Add Train</button>
-        </div>
+        </div>-->
     </div>
 
     <div id="popup" class="popup">
@@ -49,6 +57,7 @@
                 <button id="confirmButton" class="popup-key">OK</button>
             </div>
         </div>
+    </div>
     </div>
 
 
@@ -82,19 +91,19 @@
                 </div>
             </panel>
             <panel class="function-panel">
-                <button id="f0">
+                <button id="f0" class="function-button">
                     <img src="images/function-icons/Directional_lights.png" alt="Icon 1">
                     <name>Directional lights</name>
                 </button>
-                <button id="f1">
+                <button id="f1" class="function-button">
                     <img src="images/function-icons/Interior_lights.png" alt="Icon 2">
                     <name>Interior lights</name>
                 </button>
-                <button id="f2">
+                <button id="f2" class="function-button">
                     <img src="images/function-icons/Function.png" alt="Icon 3">
                     <name>Function #3</name>
                 </button>
-                <button id="f3">
+                <button id="f3" class="function-button">
                     <img src="images/function-icons/Function.png" alt="Icon 4">
                     <name>Function #4</name>
                 </button>
@@ -106,5 +115,11 @@
 
 
     <script src="script.js"></script>
+
+    <footer id="footer" class="footer">
+        <div class="footer-content">
+            Server conntected
+        </div>
+    </footer>
 </body>
 </html>
