Update to server logic, needs more testing

--- a/client/index.html
+++ b/client/index.html
@@ -101,8 +101,9 @@
 
     <script src="script.js"></script>
     <footer id="footer" class="footer">
-        <div class="footer-content">
-            Server conntected
+        <div id="log" class="log"></div>
+        <div class="serverStatus">
+            Server <span id="serverStatus"></span>
         </div>
     </footer>
 </body>
