New sorting and more updates

--- a/client/index.html
+++ b/client/index.html
@@ -13,9 +13,18 @@
         <!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />-->
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css">
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
+
+        <script type="text/javascript" src="js/underscore.js"></script>
+        <script type="text/javascript" src="js/jquery-ui.js"></script>
+        <script type="text/javascript" src="js/jsv.js"></script>
+        <script type="text/javascript" src="js/jsonform.js"></script>
 
         <script src="js/trainPanel.js"></script>
         <script src="js/serverSettings.js"></script>
+        <script src="js/addTrain.js"></script>
+        <script src="js/viewTrains.js"></script>
 
         <link rel="stylesheet" href="style/main.css">
         <link rel="stylesheet" href="style/buttons.css">
@@ -37,7 +46,8 @@
     <section class="content">
         <nav id="main-menu">
             <ul>
-                <li target="AddTrain">Add Train</li>
+                <li target="addTrain">Add Train</li>
+                <li target="viewTrains">View Trains</li>
                 <li target="addAccessory">Add Accessory</li>
                 <li target="serverSettings">Server settings</li>
             </ul>
@@ -45,6 +55,10 @@
         <section id="serverSettings">
         </section>
         <section id="trainPanel">
+        </section>
+        <section id="addTrain">
+        </section>
+        <section id="viewTrains">
         </section>
     </section>
 
