--- a/client/sections/addTrain.html
+++ b/client/sections/addTrain.html
@@ -1,4 +1,4 @@
-<h1>Add Train</h1>
+<h1 id="addTrainTitle">Add Train</h1>
 <div id="res" class="alert"></div>
 <form id="addTrainForm" style="margin: 3em;">
 </form>
