Updates to complete basic train control and database

--- a/client/index.html
+++ b/client/index.html
@@ -35,8 +35,8 @@
     </head>
 <body>
     <nav id="topNav" class="topNav">
-        <button id="trainControl" class="navButton">Trains</button>
-        <button id="accessoriesControl" class="navButton">Accessories</button>
+        <button id="trainControl" class="navButton" target="trainPanel">Trains</button>
+        <button id="accessoriesControl" class="navButton" target="accessoriesPanel">Accessories</button>
     </nav>
     <div id="menuIcon" class="menu-icon">
         <div class="bar"></div>
@@ -65,11 +65,11 @@
 <template id="trainTemplate">
     <div class="train">
         <div class="train-image">
-            <img src="images/Class66.jpg"/>
+            <img src="images/noun-train-1351954.png"/>
         </div>
         <section class="train-details">
             <h1 class="train-name">
-                EWS Class #66
+                Train
             </h1>
             <subtitle class="train-address">
                 Loco Address #<span class="train-number"></span>
