--- a/client/layoutBuilder.html
+++ b/client/layoutBuilder.html
@@ -20,8 +20,18 @@
     </nav>
 
     <section class="content">
-        <canvas id="trackCanvas" width="1024" height="800"></canvas>
+        <canvas id="trackCanvas" width="800" height="400"></canvas>
+        <buttons style="vertical-align: top; width: 200px; height: 400px; display: inline-block;">
+            <button id="addLHup" onclick="addPoint(5, 5, 'LHup', true)">Add LH (up)</button>
+            <button id="addLHdown" onclick="addPoint(5, 5, 'LHdown', true)">Add LH (down)</button>
+            <button id="addRHup" onclick="addPoint(5, 5, 'RHup', true)">Add RH (up)</button>
+            <button id="addRHdown" onclick="addPoint(5, 5, 'RHdown', true)">Add RH (down)</button>
+            <button id="addStraitShort" onclick="addStrait(5, 5, 'short')">Add Strait (short)</button>
+            <button id="addStraitLong" onclick="addStrait(5, 5, 'long')">Add Strait (long)</button>
+            <button id="addSignal" onclick="addSignal(10, 10, 'red')">Add Signal</button>
+        </buttons>
     </section>
+
 
     <footer id="footer" class="footer">
         <div id="log" class="log"></div>
