--- a/client/layoutBuilder.html
+++ b/client/layoutBuilder.html
@@ -28,7 +28,9 @@
             <button id="addRHdown" onclick="addPoint(5, 5, 'RHdown', true)">Add RH (down)</button>
             <button id="addStraitShort" onclick="addStrait(5, 5, 'short')">Add Strait (short)</button>
             <button id="addStraitLong" onclick="addStrait(5, 5, 'long')">Add Strait (long)</button>
-            <button id="addSignal" onclick="addSignal(10, 10, 'red')">Add Signal</button>
+            <button id="addSignal" onclick="addSignal(10, 10, 'red')">Add Signal</button><br/>
+            <input type="checkbox" checked id="editModeCheckbox">
+            <label for="editModeCheckbox">Edit Mode</label>
         </buttons>
     </section>
 
