Adding panel control basics

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,9 @@
         <script src="js/trainPanel.js"></script>
         <script src="js/serverSettings.js"></script>
         <script src="js/addTrain.js"></script>
+        <script src="js/addPanel.js"></script>
         <script src="js/viewTrains.js"></script>
+        <script src="js/viewPanels.js"></script>
 
         <link rel="stylesheet" href="style/main.css">
         <link rel="stylesheet" href="style/buttons.css">
@@ -48,6 +50,8 @@
             <ul>
                 <li target="addTrain">Add Train</li>
                 <li target="viewTrains">View Trains</li>
+                <li target="addPanel">Add Panel</li>
+                <li target="viewPanels">View Panels</li>
                 <li target="addAccessory">Add Accessory</li>
                 <li target="serverSettings">Server settings</li>
             </ul>
@@ -59,6 +63,10 @@
         <section id="addTrain">
         </section>
         <section id="viewTrains">
+        </section>
+        <section id="addPanel">
+        </section>
+        <section id="viewPanels">
         </section>
     </section>
 
