--- a/client/panelBuilder.html
+++ b/client/panelBuilder.html
@@ -21,12 +21,14 @@
     </nav>
 
     <section class="content">
-        <div id="trackCanvas" style="width:1024px; height:600px;"></div>
+        <div id="trackCanvas" style="width:1024px; height:600px; display: inline-block;"></div>
         <buttons style="vertical-align: top; width: 200px; height: 400px; display: inline-block;">
             <button id="addLHup" onclick="addPoint()">Add Point</button>
-            <button id="addStraitShort" onclick="addStrait('short')">Add Strait (short)</button>
-            <button id="addStraitLong" onclick="addStrait('long')">Add Strait (long)</button>
+            <button id="addStraightShort" onclick="addStraight('short')">Add Straight (short)</button>
+            <button id="addStraightLong" onclick="addStraight('long')">Add Straight (long)</button>
             <button id="addSignal" onclick="addSignal('red')">Add Signal</button><br/>
+            <button id="addControlElement" onclick="addControlElement()">Add Control Panel</button><br/>
+            <button id="savePanel" onclick="saveStage()">Save panel</button><br/>
         </buttons>
     </section>
 
