Adding controller rects

--- a/client/panelBuilder.html
+++ b/client/panelBuilder.html
@@ -21,7 +21,7 @@
     </nav>
 
     <section class="content">
-        <div id="trackCanvas" style="width:1024px; height:600px; display: inline-block;"></div>
+        <div id="trackCanvas" style="width:1024px; height:600px; display: inline-block; position: relative;"></div>
         <buttons style="vertical-align: top; width: 200px; height: 400px; display: inline-block;">
             <button id="addLHup" onclick="addPoint()">Add Point</button>
             <button id="addStraightShort" onclick="addStraight('short')">Add Straight (short)</button>
