Adding functioning control panels

--- a/client/panelBuilder.html
+++ b/client/panelBuilder.html
@@ -28,10 +28,11 @@
             <button id="addStraightLong" onclick="addStraight('long')">Add Straight (long)</button>
             <button id="addSignal" onclick="addSignal('red')">Add Signal</button><br/>
             <button id="addControlElement" onclick="addControlElement()">Add Control Panel</button><br/>
+            <button id="showControllers" onclick="renderControllers()">Show controllers</button><br/>
+            <button id="hideControllers" onclick="hideControllers()" >Hide controllers</button><br/>
             <button id="savePanel" onclick="saveStage()">Save panel</button><br/>
         </buttons>
     </section>
-
 
     <footer id="footer" class="footer">
         <div id="log" class="log"></div>
