--- a/client/panelBuilder.html
+++ b/client/panelBuilder.html
@@ -30,6 +30,8 @@
             <button id="addControlElement" onclick="addControlElement()">Add Control Panel</button><br/>
             <button id="showControllers" onclick="renderControllers()">Show controllers</button><br/>
             <button id="hideControllers" onclick="hideControllers()" >Hide controllers</button><br/>
+            <button id="showConnectors" onclick="showConnectors()">Show connectors</button><br/>
+            <button id="hideConnectors" onclick="hideConnectors()" >Hide connectors</button><br/>
             <button id="savePanel" onclick="saveStage()">Save panel</button><br/>
         </buttons>
     </section>
