--- a/client/panelBuilder.html
+++ b/client/panelBuilder.html
@@ -65,5 +65,31 @@
 
     <script src="js/panelBuilder.js"></script>
     <script src="js/panelBuilderServer.js"></script>
+    <style>
+    fieldset .form-group {
+        display: inline-block;
+        margin-right: 1em;
+    }
+    .jsonform-error-Aspects {
+        margin-bottom: 4em;
+    }
+    #configureElementForm ul {
+        margin: 0em;
+    }
+    #configureElementForm ul li {
+        margin-top: -0.8em;
+        margin-bottom: -3.6em;
+    }
+    #configureElementForm ul li ._jsonform-array-buttons {
+        position: relative;
+        top: -66px;
+        left: -40px;
+    }
+    #configureElementForm ._jsonform-array-buttons {
+        position: relative ;
+        top: 2em;
+        left: 0m;
+    }
+    </style>
 </body>
 </html>
