Updating client to reflect server status reporting

--- a/client/index.html
+++ b/client/index.html
@@ -125,7 +125,7 @@
     <footer id="footer" class="footer">
         <div id="log" class="log"></div>
         <div class="serverStatus">
-            Server <span id="serverStatus"></span>
+            Status: <span id="serverStatus"></span>
         </div>
     </footer>
 </body>
