Lots of updates

--- a/client/index.html
+++ b/client/index.html
@@ -8,30 +8,29 @@
         <meta http-equiv="Expires" content="Thu, 01 Jan 1970 00:00:00 GMT">
         <title>Add trains</title>
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-        <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.13.8/css/jquery.dataTables.css">
-        <!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />-->
-        <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css">
-        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="libraries/jquery-1.11.1.min.js"></script>
+        <script type="text/javascript" src="libraries/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="libraries/underscore.js"></script>
+        <script type="text/javascript" src="libraries/jquery-ui.js"></script>
+        <script type="text/javascript" src="libraries/jsv.js"></script>
+        <script type="text/javascript" src="libraries/jsonform.js"></script>
 
-        <script type="text/javascript" src="js/underscore.js"></script>
-        <script type="text/javascript" src="js/jquery-ui.js"></script>
-        <script type="text/javascript" src="js/jsv.js"></script>
-        <script type="text/javascript" src="js/jsonform.js"></script>
+        <script type="text/javascript" src="js/trainPanel.js"></script>
+        <script type="text/javascript" src="js/serverSettings.js"></script>
+        <script type="text/javascript" src="js/addTrain.js"></script>
+        <script type="text/javascript" src="js/addPanel.js"></script>
+        <script type="text/javascript" src="js/viewTrains.js"></script>
+        <script type="text/javascript" src="js/viewPanels.js"></script>
 
-        <script src="js/trainPanel.js"></script>
-        <script src="js/serverSettings.js"></script>
-        <script src="js/addTrain.js"></script>
-        <script src="js/addPanel.js"></script>
-        <script src="js/viewTrains.js"></script>
-        <script src="js/viewPanels.js"></script>
+        <link rel="stylesheet" type="text/css" href="style/ext/water.css">
+        <link rel="stylesheet" type="text/css" href="style/ext/jquery.dataTables.css">
+        <link rel="stylesheet" type="text/css" href="style/ext/jquery.dataTables.min.css">
 
-        <link rel="stylesheet" href="style/main.css">
-        <link rel="stylesheet" href="style/buttons.css">
-        <link rel="stylesheet" href="style/range_input.css">
-        <link rel="stylesheet" href="style/popup.css">
+        <link rel="stylesheet" type="text/css" href="style/main.css">
+        <link rel="stylesheet" type="text/css" href="style/buttons.css">
+        <link rel="stylesheet" type="text/css" href="style/range_input.css">
+        <link rel="stylesheet" type="text/css" href="style/popup.css">
+
         <link rel="manifest" href="manifest.json">
         <meta name="apple-mobile-web-app-capable" content="yes">
     </head>
