--- a/client/panelBuilder.html
+++ b/client/panelBuilder.html
@@ -24,10 +24,10 @@
     </head>
 <body>
     <nav id="topNav" class="topNav">
-        <button id="showControllers" onclick="renderControllers()">Show controllers</button>
-        <button id="hideControllers" onclick="hideControllers()" >Hide controllers</button>
-        <button id="showConnectors" onclick="showConnectors()">Show connectors</button>
-        <button id="hideConnectors" onclick="hideConnectors()" >Hide connectors</button>
+        <button id="showControllers" onclick="showControllers()">Show controllers</button>
+        <button id="hideControllers" onclick="hideControllers()" style="display: none;" >Hide controllers</button>
+        <button id="showConnectors" onclick="showConnectors()" >Show connectors</button>
+        <button id="hideConnectors" onclick="hideConnectors()" style="display: none;" >Hide connectors</button>
     </nav>
 
     <section class="content">
